--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ encoding: utf-8
 # Sections on the "people" page.
 roles:
   - key: faculty
-    name:heiheihei Faculty
+    name: 肖航 Faculty
   - key: grad
     name: 研究生 Graduate Students
   - key: ugrad
@@ -35,7 +35,7 @@ collections:
 # Navigation bar links.
 navigation:
   - title: 主页 Home
-    link: /
+    link: /xxx.com
   - title: 科研 Research
     link: /research.html
   - title: 论文 Publications
